platform/trow/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trow
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    hajimari.io/enable: 'false'
spec:
  # ingressClassName: nginx
  rules:
    - host: &host registry.127-0-0-1.nip.io
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: trow
                port:
                  number: { { .Values.trow.service.port } }
  tls:
    - hosts:
        - *host
      secretName: trow-tls-certificate
